Article image fixed size on mobile breakpoints

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ h1:hover {
   color: var(--green);
 }
 
-.author div:first-child {
+.author__name {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -337,10 +337,8 @@ h1:hover {
 
 @media (max-width: 280px) {
 
-  .article__picture img {
+  .article__picture {
     height: 150px;
-    width: 100%;
-    border-radius: 10px 10px 0 0;
   }
 
   .article__summary {
